# just-a-blockchain

./: .env.devel  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cargo.yml
genesis-key/jab/: .jab.key  address.txt  jab.pub
src/: application.rs  lib.rs  main.rs
src/application/: config.rs  event.rs  mod.rs  scheduler.rs  transaction_helper.rs  wallet_helper.rs
src/blockchain/: errors.rs  merkle.rs  mod.rs
src/blockchain/block/: header.rs  mod.rs  transaction.rs
src/blockchain/block/transaction/: builder.rs  input.rs  mod.rs  output.rs
src/blockchain/database/: key.rs  mod.rs
src/bridge/: leveldb.rs  mod.rs
src/mining/: miner.rs  mod.rs
src/net/: error.rs  mod.rs  msg.rs
src/net/message/: block.rs  miners.rs  mod.rs  request_block.rs  transaction.rs  wallet.rs
src/wallet/: errors.rs  mod.rs
