[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["command-line-utilities"]
description = "Just a blockchain implemented by me for fun"
edition = "2021"
homepage = "https://github.com/veeso/just-a-blockchain"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["networking"]
license = "The Unlicense"
name = "jab"
readme = "README.md"
repository = "https://github.com/veeso/just-a-blockchain"
version = "0.1.0"

[[bin]]
name = "jab"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
argh = "0.1.7"
futures = "0.3"
hex = "0.4.3"
libp2p = { version = "0.46.1", features = [ "tcp-tokio" ] }
libp2p-tcp = "0.34.0"
merkle = "1.11.0"
ring = "^0.16"
serde = { version = "^1.0.0", features = [ "derive" ] }
serde_json = "^1.0.0"
thiserror = "^1.0.0"
tokio = { version = "1.20.1", features = [ "full" ] }
tracing = "^0.1"
tracing-subscriber = "^0.2"

[dev-dependencies]
pretty_assertions = "^1.2.0"

[features]
default = []

[profile.dev]
incremental = true

[profile.release]
strip = true
