[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["command-line-utilities"]
description = "Just a blockchain implemented by me for fun"
edition = "2021"
homepage = "https://github.com/veeso/just-a-blockchain"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["networking"]
license = "The Unlicense"
name = "jab"
readme = "README.md"
repository = "https://github.com/veeso/just-a-blockchain"
version = "0.1.0"

[[bin]]
name = "jab"
path = "src/main.rs"

[[bin]]
name = "jab-wallet"
path = "src/bin/wallet.rs"

[dependencies]
argh = "0.1.8"
anyhow = "^1.0"
futures = "0.3"
data-encoding = "^2.3.2"
db-key = "^0.0.5"
dotenv = "0.15.0"
envy = "0.4.2"
hex = "0.4.3"
leveldb = "0.8.6"
libp2p = { version = "0.46.1", features = [ "tcp-tokio" ] }
libp2p-tcp = "0.34.0"
merkle = "1.11.0"
ripemd = "^0.1.1"
ring = "^0.16"
rust_decimal = "^1.26"
rust_decimal_macros = "^1.26"
secp256k1 = { version = "0.24.0", features = [ "rand" ] }
serde = { version = "^1.0.0", features = [ "derive" ] }
serde_json = "^1.0.0"
thiserror = "^1.0.0"
tokio = { version = "1.20.1", features = [ "full" ] }
tokio-cron-scheduler = { version = "0.8.0", features = [ "signal" ] }
tracing = "^0.1"
tracing-subscriber = "^0.2"
void = "^1.0.0"

[dev-dependencies]
pretty_assertions = "^1.2.0"
tempfile = "^3.2.0"

[features]
default = []

[profile.dev]
incremental = true

[profile.release]
strip = true
